--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,5 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="lightBlue">#63B5F8</color>
-    <color name="darkBlue">#0062B3</color>
-    <color name="gray">#666666</color>
+    <color name="lightBlue">#7CC4FF</color>
 </resources>
