--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="?attr/colorSurface"
@@ -14,66 +12,25 @@
         android:layout_height="wrap_content"
         android:text="KBTU Helper"
         android:textColor="?attr/colorPrimary"
-        android:textSize="28sp"
+        android:textSize="34sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/card_view_notes"
+        app:layout_constraintBottom_toTopOf="@+id/card_view_map"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.5" />
+        app:layout_constraintVertical_bias="0.138" />
 
-    <com.google.android.material.card.MaterialCardView
-        android:id="@+id/card_view_notes"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginTop="10dp"
-        android:clickable="true"
-        android:focusable="true"
-        app:cardCornerRadius="16dp"
-        app:cardElevation="8dp"
-        app:strokeWidth="1dp"
-        app:strokeColor="?attr/colorPrimary"
-        app:layout_constraintBottom_toTopOf="@id/card_view_map"
-        app:layout_constraintStart_toStartOf="parent"
+    <ImageView
+        android:id="@+id/splashImage"
+        android:layout_width="245dp"
+        android:layout_height="174dp"
+        android:layout_marginTop="8dp"
+        android:contentDescription="Логотип"
+        android:src="@drawable/kbtu_helper"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginBottom="15dp">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
-            android:gravity="center"
-            android:orientation="vertical"
-            android:padding="24dp"
-            tools:layout_editor_absoluteX="0dp">
-
-            <ImageView
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:src="@drawable/note_stack"
-                app:tint="@color/lightBlue"
-                android:contentDescription="notes pic" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:text="Заметки"
-                android:textColor="?attr/colorOnSurface"
-                android:textSize="20sp"
-                android:textStyle="bold" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
-                android:gravity="center"
-                android:text="Создание и редактирование заметок"
-                android:textColor="?attr/colorOnSurfaceVariant"
-                android:textSize="14sp" />
-        </LinearLayout>
-    </com.google.android.material.card.MaterialCardView>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/title_text_view" />
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/card_view_map"
@@ -91,8 +48,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
-
-
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -126,7 +81,7 @@
                 android:textColor="?attr/colorOnSurfaceVariant"
                 android:gravity="center"/>
 
-
+            
 
         </LinearLayout>
 
@@ -181,7 +136,6 @@
                 android:textColor="?attr/colorOnSurfaceVariant"
                 android:gravity="center"/>
         </LinearLayout>
-
     </com.google.android.material.card.MaterialCardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
