--- a/app/src/main/res/layout/activity_notes.xml
+++ b/app/src/main/res/layout/activity_notes.xml
@@ -6,7 +6,7 @@
     android:id="@+id/notesActivity"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".NotesActivity">
+    tools:context=".notes.NotesActivity">
 
     <TextView
         android:id="@+id/notesHeading"
